fix: section component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { css, cva, type Styles } from "../../styled-system/css";
+import { cva, type Styles } from "../../styled-system/css";
 import { center, circle, hstack, vstack } from "../../styled-system/patterns";
 
 const links = [
