--- a/src/components/top/History.astro
+++ b/src/components/top/History.astro
@@ -3,14 +3,11 @@ import { css } from "../../../styled-system/css";
 import { container } from "../../../styled-system/patterns";
 import Fluid from "../Fluid.astro";
 import HistoryItem from "../HistoryItem.astro";
-import Section from "../Section.astro";
+import Section from "./TopSection.astro";
 
 const date = new Date();
 
 const section = container({
-  gap: "gap.section",
-  display: "flex",
-  flexDirection: "column",
   paddingInline: "px.container",
   paddingBlock: "py.section",
   maxWidth: "max.width.container",
