--- a/src/components/top/History.astro
+++ b/src/components/top/History.astro
@@ -3,7 +3,7 @@ import { css } from "../../../styled-system/css";
 import { container } from "../../../styled-system/patterns";
 import Fluid from "../Fluid.astro";
 import HistoryItem from "../HistoryItem.astro";
-import Section from "./TopSection.astro";
+import TopSection from "./TopSection.astro";
 
 const date = new Date();
 
@@ -29,7 +29,7 @@ const fluid_container = css({
 });
 ---
 
-<Section heading="HISTORY" href="/history" class={section}>
+<TopSection heading="HISTORY" href="/history" class={section}>
   <ul>
     {
       [...Array(5)].map(() => (
@@ -42,4 +42,4 @@ const fluid_container = css({
     }
   </ul>
   <div class={fluid_container}><Fluid /></div>
-</Section>
+</TopSection>
