feat: impl blog page

--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -19,7 +19,11 @@ const blog_item = css({
 
 <div class={blog_item}>
   <time
-    class={css({ fontSize: "3xl", paddingBlock: "4", display: "inline-block" })}
+    datetime={date.toISOString()}
+    class={css({
+      paddingBlock: "4",
+      display: "inline-block",
+    })}
   >
     {format(date)}
   </time>
