feat: add works page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,8 +12,8 @@ const links = [
     target: "/blog",
   },
   {
-    name: "APPS",
-    target: "/apps",
+    name: "WORKS",
+    target: "/works",
   },
   {
     name: "HISTORY",
