--- a/src/components/WorkItem.astro
+++ b/src/components/WorkItem.astro
@@ -16,14 +16,27 @@ const app_item = vstack({
   border: "normal",
   borderRadius: "4xl",
   gap: "10",
-  maxWidth: "2xl",
   paddingInline: "10",
   paddingBlock: "14",
+  height: "100%",
 });
 ---
 
 <a class={app_item} href={href}>
-  <Image src={image} alt={name} class={css({ width: "30%" })} />
-  <p class={css({ fontFamily: "dots", fontSize: "4xl" })}>{name}</p>
+  <Image
+    src={image}
+    alt={name}
+    class={css({ height: "6rem", objectFit: "contain" })}
+  />
+  <p
+    class={css({
+      fontWeight: "bold",
+      fontSize: "4xl",
+      fontFamily: "mplus",
+      textAlign: "center",
+    })}
+  >
+    {name}
+  </p>
   <p><slot /></p>
 </a>
