--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,15 @@ import Blog from "../components/top/Blog.astro";
 import FirstView from "../components/top/FirstView.astro";
 import Layout from "../layouts/Layout.astro";
 
-import Apps from "../components/top/Apps.astro";
 import History from "../components/top/History.astro";
 import Background from "../components/Background.astro";
+import Works from "../components/top/Works.astro";
 ---
 
 <Layout>
   <Background />
   <FirstView />
   <Blog />
-  <Apps />
+  <Works />
   <History />
 </Layout>
