--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/zen-dots";
 import "@fontsource/zen-maru-gothic";
+import "@fontsource/m-plus-1p/700.css";
 
 import "../index.css";
 import Header from "../components/Header.astro";
