--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -30,7 +30,7 @@ const page_title = title
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" href="/icon.png" />
 <meta name="generator" content={Astro.generator} />
 
 <title>{page_title}</title>
