--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -11,6 +11,8 @@ const props = Astro.props;
 const cont = container({
   maxWidth: "max.width.container",
   paddingInline: "px.container",
+  overflowX: "hidden",
+  paddingBottom: "10",
 });
 ---
 
