--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -14,6 +14,10 @@ const blog_item = css({
   width: "100%",
   paddingInline: "7",
   background: "bg",
+  transition: "transform 0.3s {easings.easeOutExpo}",
+  _hover: {
+    transform: "scale(1.025)",
+  },
 });
 ---
 
