--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,6 +39,9 @@ const underline = css({
 <footer class={footer({ page: Astro.url.pathname == "/" ? "top" : "other" })}>
   <span class={inline_block}>(C)opyright 2024 NITO</span>
   <span class={inline_block}>
-    Source Code on <a href="" class={underline}>GitHub</a>.
+    Source Code on <a
+      href="https://github.com/Nitoryu008/nito-web"
+      class={underline}>GitHub</a
+    >.
   </span>
 </footer>
