--- a/src/components/MoreButton.astro
+++ b/src/components/MoreButton.astro
@@ -23,20 +23,28 @@ const button = center({
   paddingBlock: "3",
   borderRadius: "full",
   verticalAlign: "middle",
+  transition: "transform 0.3s {easings.easeOutExpo}",
+  _hover: {
+    transform: "scale(1.05)",
+  },
 });
 const arrow = css({
   height: "0.8em",
   width: "auto",
+  animation: "arrow",
+  display: "inline-block",
 });
 ---
 
 <div class={button}>
-  <a
-    href={href}
-    class={linkOverlay({
+  <a href={href} class={linkOverlay({ zIndex: "10" })}></a>
+  <p
+    class={css({
       pos: "relative",
       top: "0.1em",
-    })}>MORE</a
+    })}
   >
+    MORE
+  </p>
   <Image src={arrowImg} alt="" class={arrow} />
 </div>
